--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-plugin-wix-style-react": "^1.0.70",
     "execa": "^1.0.0",
     "expect": "^23.3.0",
     "express": "^4.16.3",
@@ -76,6 +77,7 @@
     "prettier": "^1.12.1",
     "prompts": "^0.1.8",
     "puppeteer": "^1.13.0",
+    "react": "^16.8.6",
     "retry-promise": "^1.0.0",
     "rimraf": "^2.6.2",
     "semver": "^5.5.0",
