--- a/packages/eslint-config-yoshi/package.json
+++ b/packages/eslint-config-yoshi/package.json
@@ -17,11 +17,13 @@
     "eslint": "^5.0.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-wix-style-react": "^1.0.1",
     "eslint-plugin-react-hooks": "^1.6.0"
   },
   "devDependencies": {
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-wix-style-react": "^1.0.1",
     "eslint-plugin-react-hooks": "^1.6.0"
   }
 }
