--- a/packages/eslint-config-yoshi-base/package.json
+++ b/packages/eslint-config-yoshi-base/package.json
@@ -24,8 +24,6 @@
     "babel-eslint": "^10.0.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^22.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "glob": "^7.1.3",
-    "lodash": "^4.17.10"
+    "eslint-plugin-prettier": "^3.0.0"
   }
 }
