--- a/packages/tslint-config-yoshi/package.json
+++ b/packages/tslint-config-yoshi/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "tslint-config-yoshi-base": "4.1.0",
-    "tslint-react": "^3.6.0"
+    "tslint-react": "^3.6.0",
+    "tslint-react-hooks": "^2.1.0"
   },
   "devDependencies": {
+    "glob": "^7.1.3",
     "tslint": "^5.10.0",
     "tslint-plugin-wix-style-react": "^1.0.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "react": "^16.8.6"
   },
   "peerDependencies": {
     "tslint": ">=5.10.0",
