Add typescript dep

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "tempy": "^0.2.1",
     "terminate": "^2.1.0",
     "tslint": "^5.16.0",
+    "typescript": "^3.0.0",
     "verdaccio": "^3.8.3",
     "wait-port": "^0.2.2"
   },
